--- a/home/package.json
+++ b/home/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "preinstall": "npx npm-force-resolutions",
         "setup": "gem install bundler && bundle install && npm i",
-        "start": "concurrently --kill-others \"npm run css:dev\" \"jekyll serve\"",
+        "start": "concurrently --kill-others \"npm run css:dev\" \"bundle exec jekyll serve\"",
         "build": "npm run css:rel && jekyll build",
         "css:dev": "parcel watch styles/index.css --no-source-maps",
         "css:rel": "parcel build styles/index.css --no-source-maps"
