--- a/home/package.json
+++ b/home/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "your.repo.name",
+    "name": "home.invenhost.com",
     "version": "0.0.1",
-    "description": "Your repo description",
+    "description": "A UI test",
     "scripts": {
         "preinstall": "npx npm-force-resolutions",
         "setup": "gem install bundler && bundle install && npm i",
