--- a/home/_config.yml
+++ b/home/_config.yml
@@ -1,7 +1,15 @@
 
 title: InvenTree
-description: Intuitive Inventory Management
+tagline: Intuitive Inventory Management
 demo-link: http://demo.inventreedb.com/
+
+description: >-
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+
 
 plugins:
   - jekyll-seo-tag
