set header links

--- a/home/_config.yml
+++ b/home/_config.yml
@@ -2,6 +2,8 @@
 title: InvenTree
 tagline: Intuitive Inventory Management
 demo-link: http://demo.inventreedb.com/
+doc-link: https://inventree.readthedocs.io/en/latest/
+plugin-link: https://repo.invenhost.com/
 
 description: >-
   Write an awesome description for your new site here. You can edit this
