maker should fit better than hobby

--- a/home/_data/general/footer.yml
+++ b/home/_data/general/footer.yml
@@ -41,8 +41,8 @@
   cats:
   - name: Home
     link: /
-  - name: For Hobby
-    link: /hobby
+  - name: For Maker
+    link: /maker
   - name: For Business
     link: /business
   - name: For Education
