--- a/home/_data/for_maker.yml
+++ b/home/_data/for_maker.yml
@@ -1,6 +1,6 @@
 header:
-  ref: hobby
-  title: For Hobbyist
+  ref: maker
+  title: For Maker
   text: |
     This pipe does something a little different.
     It preserves the breaks.
