--- a/home/_data/general/function.yml
+++ b/home/_data/general/function.yml
@@ -8,8 +8,10 @@ functions:
     text: InvenTree allows you to easily create, modify or delete suppliers and supplier items linked to any part in your inventory.
     link: https://inventree.readthedocs.io/en/latest/companies/supplier/
   - title: Instant Stock Knowledge
-    text: Instantly view current stock for a certain part, in a particular location, or required for an individual build. Stock items are organized in cascading locations and sub-locations, allowing flexible inspection of stock under any location. Stock items can be serialized for tracking of individual items, and test results can be stored against a serialized stock item for the purpose of acceptance testing and commissioning.
+    text: Instantly view current stock for a certain part, in a particular location, or required for an individual build.
+    extend: Stock items are organized in cascading locations and sub-locations, allowing flexible inspection of stock under any location. Stock items can be serialized for tracking of individual items, and test results can be stored against a serialized stock item for the purpose of acceptance testing and commissioning.
     link: https://inventree.readthedocs.io/en/latest/stock/stock/
   - title: BOM Management
-    text: Intelligent BOM (Bill of Material) management provides a clear understanding of the sub-parts required to make a new part. InvenTree allows you to upload simple BOM files in multiple formats, and download a detailed BOM with all the information stored in its database.
+    text: Intelligent <strong>B</strong>ill <strong>o</strong>f <strong>M</strong>aterial management provides a clear understanding of the sub-parts required to make a new part.
+    extend: InvenTree allows you to upload simple BOM files in multiple formats, and download a detailed BOM with all the information stored in its database.
     link: https://inventree.readthedocs.io/en/latest/build/bom/
