--- a/home/_data/general/function.yml
+++ b/home/_data/general/function.yml
@@ -1,4 +1,4 @@
-title: We start with simple core functions
+title: InvenTree builds it vast functions on top of a few core workflows
 text:
 functions:
   - title: Organize Parts
