change pipeline to use postcss

--- a/home/_config.yml
+++ b/home/_config.yml
@@ -15,6 +15,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 plugins:
   - jekyll-seo-tag
+  - jekyll-postcss
 
 exclude: [
   styles/index.css,
