--- a/home/Gemfile
+++ b/home/Gemfile
@@ -1,3 +1,7 @@
 source 'https://rubygems.org'
 gem 'jekyll'
-gem 'jekyll-seo-tag'
+
+group :jekyll_plugins do
+    gem 'jekyll-postcss'
+    gem 'jekyll-seo-tag'
+end
