--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ description: >-
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
-baseurl: "/home.invenhost.com" # the subpath of your site, e.g. /blog  # TODO change when in prod
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/home.invenhost.com"
+url: """
 
 
 plugins:
