--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: >-
   Google search results) and in your feed.xml site description.
 
 baseurl: "/home.invenhost.com"
-url: """
+url: ""
 
 
 plugins:
