add links to functions

--- a/_data/general/function.yml
+++ b/_data/general/function.yml
@@ -1,4 +1,6 @@
 title: InvenTree builds it vast functions on top of a few core workflows
+link:
+  internal: /functions
 text:
 functions:
   - title: Organize Parts
