--- a/_data/for_edu.yml
+++ b/_data/for_edu.yml
@@ -1,6 +1,6 @@
 ref: edu
 link:
-  internal: edu
+  internal: education
 title: For Education
 text: |
   Electronic Labs are creative places. Whether your institution works with K12 or post-grads - organisation and tooling is challenging. Let InvenTree help you calm the storm!
