--- a/_data/for_maker.yml
+++ b/_data/for_maker.yml
@@ -3,17 +3,10 @@ link:
   internal: maker
 title: For Maker
 text: |
-  This pipe does something a little different.
-  It preserves the breaks.
-
+  lorem ipsum text
 
 features:
-  - title: mountain bikes
-    subtitle: very intresting
-    description: long text describing this
-    link: Https://example.com/
-
-  - title: mountain bikes3
-    subtitle: very intresting3
-    description: long text describing this3
-    link: Https://example.com/3
+  - title: lorem ipsum title
+    subtitle: lorem ipsum subtitle
+    description: lorem ipsum description
+    link: https://example.com/
