add souce back in

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
         uses: limjh16/jekyll-action-ts@v2
         with:
           enable_cache: true
-          # jekyll_src: 'site'
+          jekyll_src: 'site'
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
