--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - run: npm install
+      - run: cd site && npm install
       - name: Build site
         uses: limjh16/jekyll-action-ts@v2
         with:
