--- a/site/package.json
+++ b/site/package.json
@@ -1,11 +1,11 @@
 {
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.4.1",
-    "autoprefixer": "^10.4.0",
-    "cssnano": "^5.0.10",
-    "postcss": "^8.3.11",
-    "postcss-cli": "^9.0.2",
+  "dependencies": {
+    "@tailwindcss/typography": "^0.5.0",
+    "autoprefixer": "^10.4.2",
+    "cssnano": "^5.0.15",
+    "postcss": "^8.4.5",
+    "postcss-cli": "^9.1.0",
     "postcss-import": "^14.0.2",
-    "tailwindcss": "^2.2.19"
+    "tailwindcss": "^3.0.15"
   }
 }
