--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 title: InvenTree
 tagline: Intuitive Inventory Management
-demo-link: https://demo.inventreedb.com/
+demo-link: https://inventree.readthedocs.io/en/latest/demo/
 doc-link: https://inventree.readthedocs.io/en/latest/
 plugin-link: https://repo.invenhost.com/
 
