add additional gems for prod site

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,10 @@ url: ""
 plugins:
   - jekyll-seo-tag
   - jekyll-postcss-v2
+  - 'jekyll-sitemap'
+  - 'jekyll-feed'
+  - 'jekyll-mentions'
+  - 'jekyll_custom_permalink'
 
 exclude: [
   styles/index.css,
