--- a/_config.yml
+++ b/_config.yml
@@ -45,10 +45,10 @@ defaults:
 plugins:
   - jekyll-seo-tag
   - jekyll-postcss-v2
-  - 'jekyll-sitemap'
-  - 'jekyll-feed'
-  - 'jekyll-mentions'
-  - 'jekyll_custom_permalink'
+  - jekyll-sitemap
+  - jekyll-feed
+  - jekyll-mentions
+  - jekyll_custom_permalink
 
 exclude: [
   package.json,
