--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ title: InvenTree
 tagline: Intuitive Inventory Management
 demo-link: https://inventree.readthedocs.io/en/latest/demo/
 doc-link: https://inventree.readthedocs.io/en/latest/
-plugin-link: https://repo.invenhost.com/
+plugin-link: 
+  internal: plugins.html
 
 description: >-
   InvenTree is an open-source inventory management system which provides intuitive parts management and stock control.
