nicer? slugtext for education

--- a/_data/for_edu.yml
+++ b/_data/for_edu.yml
@@ -3,7 +3,7 @@ link:
   internal: use/education.md
 title: For Education
 text: |
-  Electronic Labs are creative places. Whether your institution works with K12 or post-grads - organisation and tooling is challenging. Let InvenTree help you calm the storm!
+  Electronic Labs are creative places. Whether your institution works with K12 or post-grads - organisation and tooling is challenging. Let InvenTree at least do the invetory reliably for you!
 
 features:
   - title: Open Source - Open Knowledge
