use resolver for global link section

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ title: InvenTree
 tagline: Intuitive Inventory Management
 demo-link: https://inventree.readthedocs.io/en/latest/demo/
 doc-link: https://inventree.readthedocs.io/en/latest/
+blog-link:
+  internal: blog/index.html
 plugin-link: 
   internal: plugins.html
 
