make feature text more similar

--- a/_data/for_edu.yml
+++ b/_data/for_edu.yml
@@ -8,10 +8,10 @@ text: |
 features:
   - title: Open Source - Open Knowledge
     subtitle: Stay independed of big vendors
-    description: Free software of big vendors helps the budget. But how about your students?<br>Don’t teach tools – teach process and competence. InvenTree is MIT licensed and free forever.<br>Also, we are open to contribution from all ages!
-    link: https://example.com/
+    text: Free software of big vendors helps the budget. But how about your students?
+    extend: Don’t teach tools – teach process and competence. InvenTree is MIT licensed and free forever.<br>Also, we are open to contribution from all ages!
 
   - title: lorem ipsum title
     subtitle: lorem ipsum subtitle
-    description: lorem ipsum description
+    text: lorem ipsum description
     link: https://example.com/
