--- a/_data/for_business.yml
+++ b/_data/for_business.yml
@@ -8,7 +8,7 @@ text: |
 features:
   - title: lorem ipsum title
     subtitle: lorem ipsum subtitle
-    description: |
+    text: |
       lorem ipsum
 
       - lorem ipsum
@@ -20,5 +20,5 @@ features:
 
   - title: lorem ipsum title
     subtitle: lorem ipsum subtitle
-    description: lorem ipsum description
+    text: lorem ipsum description
     link: https://example.com/
