--- a/_data/ctas/end.yml
+++ b/_data/ctas/end.yml
@@ -1,4 +1,4 @@
 text: Ready for a glimpse into the future?<br>Together we make InvenTree better, faster and more helpfull each day.
 btn:
   - text: open the roadmap
-    link: https://inventree.readthedocs.io/en/latest/upcoming/
+    link: https://github.com/inventree/InvenTree/labels/roadmap
