rename repo in context

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: >-
   InvenTree is an open-source inventory management system which provides intuitive parts management and stock control.
   It is at the center of an ecosystem of addins for EDA tools, API wrapper, deeply integrated plugins and 3rd party tools.
 
-baseurl: "/home.invenhost.com"
+baseurl: "/inventree-website"
 url: ""
 
 collections:
