rearange header links and add deploy

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ title: InvenTree
 tagline: Intuitive Inventory Management
 demo-link: https://inventree.readthedocs.io/en/latest/demo/
 doc-link: https://inventree.readthedocs.io/en/latest/
+deploy-link:
+  internal: deploy/index.md
 blog-link:
   internal: blog.html
 plugin-link: 
