--- a/_data/general/footer.yml
+++ b/_data/general/footer.yml
@@ -12,14 +12,14 @@
     internal: contribute/index.md
   cats:
   - name: Translate
-    internal: contribute/index.md#translate
+    internal: contribute/index.md
   - name: Code
     internal: contribute/code/index.md
   - name: Community
     link: https://github.com/inventree/InvenTree/issues/new/choose
-    internal: contribute#community.md
+    internal: contribute/index.md
   - name: Sponsor
-    internal: contribute#sponsor.md
+    internal: contribute/index.md
 
 - title: Ecosystem
   link:
