Add / update contribution information

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,10 @@ blog-link:
   internal: blog.html
 plugin-link: 
   internal: plugins.html
+support-link:
+  internal: support.md
+contribute-link:
+  internal: contribute.md
 
 # Hosting parameters
 baseurl: "/inventree-website"
