--- a/_data/general/footer.yml
+++ b/_data/general/footer.yml
@@ -15,6 +15,8 @@
   cats:
   - name: API
     internal: extend/api.md
+  - name: App
+    internal: extend/app.md
   - name: Integrate
     internal: extend/integrate/index.md
   - name: Plugins
