--- a/_data/ctas/newsletter.yml
+++ b/_data/ctas/newsletter.yml
@@ -1,4 +1,4 @@
-text: Ready for a glimpse into the future?<br>Together we make InvenTree better, faster and more helpfull each day.
+text: Join the newsletter to stay up to date.
 btn:
   - text: Sign up
     link:
