--- a/_data/team.yml
+++ b/_data/team.yml
@@ -8,13 +8,13 @@ team:
         link: https://github.com/SchrodingersGat
   - tag: eeintech
     name: Francois
-    text: Francois is an EE. He is part of the core team an maintainer of [Ki-nTree](https://github.com/sparkmicro/Ki-nTree).
+    text: Francois is an EE. He is part of the core team an maintainer of Ki-nTree.
     links:
       - text: GitHub
         link: https://github.com/eeintech
   - tag: matmair
     name: Matthias
-    text: Matthias is an Austrian developer. He is part of the core team and focuses on `enterprise` enhancments.
+    text: Matthias is an Austrian developer. He is part of the core team and focuses on enterprise enhancments.
     links:
       - text: GitHub
         link: https://github.com/matmair
