--- a/_data/team.yml
+++ b/_data/team.yml
@@ -8,7 +8,7 @@ team:
         link: https://github.com/SchrodingersGat
   - tag: eeintech
     name: Francois
-    text: Francois is an EE. He is part of the core team an maintainer of Ki-nTree.
+    text: Francois is an EE. He is part of the core team and the maintainer of Ki-nTree.
     links:
       - text: GitHub
         link: https://github.com/eeintech
