fix spelling error

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -14,7 +14,7 @@ team:
         link: https://github.com/eeintech
   - tag: matmair
     name: Matthias
-    text: Matthias is an Austrian developer. He is part of the core team and focuses on enterprise enhancments.
+    text: Matthias is an Austrian developer. He is part of the core team and focuses on enterprise enhancement.
     links:
       - text: GitHub
         link: https://github.com/matmair
