--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1,4 +1,4 @@
-text: InvenTree has had 40+ contributors since the project started in March 2017.
+text: InvenTree has had 40+ contributors since the project started in March 2017. Here are some of the currently most active devs.
 team:
   - tag: SchrodingersGat
     name: Oliver
