--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ contribute-link:
 
 # Hosting parameters
 baseurl: ""
-url: "https://inventree.org"
+url: ""
 
 # Analytics
 analytics-domain: offen.inventree.org
