--- a/_data/functions/general.yml
+++ b/_data/functions/general.yml
@@ -1,4 +1,4 @@
-title: InvenTree builds it vast functions on top of a few core workflows
+title: InvenTree builds it's vast functions on top of a few core workflows
 link:
   internal: functions.md
 text:
