--- a/_data/ctas/end.yml
+++ b/_data/ctas/end.yml
@@ -1,4 +1,4 @@
-text: Ready for a glimpse into the future?<br>Together we make InvenTree better, faster and more helpfull each day.
+text: Ready for a glimpse into the future?<br>Together we make InvenTree better, faster and more helpful each day.
 btn:
-  - text: open the roadmap
+  - text: Open the roadmap
     link: https://github.com/inventree/InvenTree/labels/roadmap
